@@ -43,6 +43,7 @@
     <string id="30043">Delete files</string>
     <string id="30044">Save files</string>
     <string id="30045">Ask to save</string>
+    <string id="30046">BTclient (python-libtorrent via http)</string>
     <string id="30101">Interface</string>
     <string id="30102">P2P Network</string>
     <string id="30103">Advanced</string>
