@@ -43,6 +43,7 @@
     <string id="30043">Удалять файлы</string>
     <string id="30044">Сохранять файлы</string>
     <string id="30045">Спросить о сохранении</string>
+    <string id="30046">BTclient (python-libtorrent по http)</string>
     <string id="30101">Интерфейс</string>
     <string id="30102">P2P Сеть</string>
     <string id="30103">Дополнительные</string>
